# scib-rapids

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  tutorials.md
docs/extensions/: typed_returns.py
docs/notebooks/: lung_example.ipynb  quickstart.ipynb
scripts/: benchmark_report.py
src/scib_rapids/: __init__.py  _types.py
src/scib_rapids/metrics/: _graph_connectivity.py  _isolated_labels.py  _kbet.py  _lisi.py  _nmi_ari.py  _pcr_comparison.py  _silhouette.py
src/scib_rapids/nearest_neighbors/: __init__.py  _dataclass.py  _pynndescent.py
src/scib_rapids/utils/: _diffusion_nn.py  _dist.py  _kmeans.py  _lisi.py  _pca.py  _pcr.py  _silhouette.py  _utils.py
tests/: test_benchmark.py  test_cross_validate.py  test_metrics.py
tests/utils/: data.py
